--- a/src/app/componentes/account/login/login.component.html
+++ b/src/app/componentes/account/login/login.component.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="text-center mt-sm-5 mb-4 text-white-50">
+                    <div class="text-center mb-4 text-white-50">
                         <div>
                             <a href="" class="d-inline-block auth-logo">
                                 <img src="assets/images-win/WinLogo.png" alt="" height="130">
@@ -45,40 +45,40 @@
                                       [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
                                       placeholder="Enter email">
                                       <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-                                          <div *ngIf="f['email'].errors['required']">Email is required</div>
-                                          <div *ngIf="f['email'].errors['email']">Email must be a valid email address
+                                          <div *ngIf="f['email'].errors['required']">Dato requerido</div>
+                                          <div *ngIf="f['email'].errors['email']">Se debe ingresar una dirección válida
                                           </div>
                                       </div>
                                     </div>
   
                                     <div class="mb-3">
                                         <div class="float-end">
-                                            <a routerLink="/pass-reset/basic" class="text-muted">Forgot password?</a>
+                                            <a routerLink="/pass-reset/basic" class="text-muted">Olvidé mi contraseña</a>
                                         </div>
-                                        <label class="form-label" for="password-input">Password</label>
+                                        <label class="form-label" for="password-input">Contraseña</label>
                                         <div class="position-relative auth-pass-inputgroup mb-3">
-                                            <input [type]="fieldTextType ? 'text' : 'password'" class="form-control pe-5" placeholder="Enter password" id="password-input" formControlName="password"
+                                            <input [type]="fieldTextType ? 'text' : 'password'" class="form-control pe-5" placeholder="Ingrese contraseña" id="password-input" formControlName="password"
                                             [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
                                             <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted" type="button" id="password-addon"><i class="mdi align-middle" [ngClass]="{'mdi-eye-off-outline': !fieldTextType, 'mdi-eye-outline': fieldTextType
                                             }" (click)="toggleFieldTextType()"></i></button>
                                             <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-                                              <span *ngIf="f['password'].errors['required']">Password is required</span>
+                                              <span *ngIf="f['password'].errors['required']">Dato requerido</span>
                                             </div>
                                         </div>
                                     </div>
   
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
-                                        <label class="form-check-label" for="auth-remember-check">Remember me</label>
+                                        <label class="form-check-label" for="auth-remember-check">Recordarme</label>
                                     </div>
   
                                     <div class="mt-4">
-                                        <button class="btn btn-success w-100" type="submit">Sign In</button>
+                                        <button class="btn btn-success w-100" type="submit">Iniciar Sesión</button>
                                     </div>
   
                                     <div class="mt-4 text-center">
                                         <div class="signin-other-title">
-                                            <h5 class="fs-13 mb-4 title">Sign In with</h5>
+                                            <h5 class="fs-13 mb-4 title">Iniciar Sesión con</h5>
                                         </div>
                                         <div class="d-flex gap-2 justify-content-center">
                                             <button type="button" class="btn btn-primary btn-icon waves-effect waves-light"><i class="ri-facebook-fill fs-16"></i></button>
@@ -95,7 +95,7 @@
                     <!-- end card -->
   
                     <div class="mt-4 text-center">
-                        <p class="mb-0">Don't have an account ? <a routerLink="/auth/register" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
+                        <p class="mb-0">¿No tienes una cuenta? <a routerLink="/auth/registrarse" class="fw-semibold text-primary text-decoration-underline"> Registrarse </a> </p>
                     </div>
   
                 </div>
