--- a/src/app/componentes/account/registrarse/registrarse.component.html
+++ b/src/app/componentes/account/registrarse/registrarse.component.html
@@ -1,1 +1,133 @@
-<p>registrarse works!</p>
+<div class="auth-page-wrapper pt-5">
+    <!-- auth page bg -->
+    <div class="auth-one-bg-position auth-one-bg"  id="auth-particles">
+        <div class="bg-overlay"></div>
+  
+        <div class="shape">
+            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1440 120">
+                <path d="M 0,36 C 144,53.6 432,123.2 720,124 C 1008,124.8 1296,56.8 1440,40L1440 140L0 140z"></path>
+            </svg>
+        </div>
+    </div>
+  
+    <!-- auth page content -->
+    <div class="auth-page-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-center mb-4 text-white-50">
+                        <div>
+                            <a href="" class="d-inline-block auth-logo">
+                                <img src="assets/images-win/WinLogo.png" alt="" height="130">
+                            </a>
+                        </div>
+                        <p class="mt-3 fs-15 fw-medium">Jugar nunca fue tan fácil</p>
+                    </div>
+                </div>
+            </div>
+            <!-- end row -->
+  
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-lg-6 col-xl-5">
+                    <div class="card">
+  
+                        <div class="card-body p-4">
+                            <div class="text-center mt-2">
+                                <h5 class="text-primary">Creá tu cuenta</h5>
+                                <p class="text-muted">Y empezá a buscar tu próximo partido</p>
+                            </div>
+                            <div class="p-2 mt-4">
+                                <form [formGroup]="FormReg" (ngSubmit)="onSubmit()">
+  
+                                    <div class="mb-3">
+                                        <label for="useremail" class="form-label">Email <span class="text-danger">*</span></label>
+                                        <input type="email" class="form-control" id="useremail" placeholder="Ingrese su email" required formControlName="email" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
+                                        <div class="invalid-feedback">
+                                            Dato requerido
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Teléfono <span class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" id="telefono" placeholder="Ingrese su número" required formControlName="telefono" [ngClass]="{ 'is-invalid': submitted && f['telefono'].errors }">
+                                        <div class="invalid-feedback">
+                                            Dato requerido
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Nombre <span class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" required formControlName="nombre" [ngClass]="{ 'is-invalid': submitted && f['nombre'].errors }">
+                                        <div class="invalid-feedback">
+                                            Dato requerido
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label">Apellido <span class="text-danger">*</span></label>
+                                        <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido" required formControlName="apellido" [ngClass]="{ 'is-invalid': submitted && f['apellido'].errors }">
+                                        <div class="invalid-feedback">
+                                            Dato requerido
+                                        </div>
+                                    </div>
+  
+                                    <div class="mb-2">
+                                        <label for="userpassword" class="form-label">Contraseña <span class="text-danger">*</span></label>
+                                        <input type="password" class="form-control" id="userpassword" placeholder="Ingrese su contraseña" required formControlName="password" [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
+                                        <div class="invalid-feedback">
+                                            Dato requerido
+                                        </div>
+                                    </div>
+  
+                                    <div class="mb-4">
+                                        <p class="mb-0 fs-12 text-muted fst-italic">Al registrarse en Win acepta los <a href="javascript:void(0);" class="text-primary text-decoration-underline fst-normal fw-medium">Terminos de uso</a></p>
+                                    </div>
+  
+                                    <div class="mt-4">
+                                        <button class="btn btn-primary w-100" type="submit">Registrarme</button>
+                                    </div>
+  
+                                    <!-- <div class="mt-4 text-center">
+                                        <div class="signin-other-title">
+                                            <h5 class="fs-13 mb-4 title text-muted">Crear cuenta con</h5>
+                                        </div>
+  
+                                        <div class="d-flex gap-2 justify-content-center">
+                                            <button type="button" class="btn btn-primary btn-icon waves-effect waves-light"><i class="ri-facebook-fill fs-16"></i></button>
+                                            <button type="button" class="btn btn-danger btn-icon waves-effect waves-light"><i class="ri-google-fill fs-16"></i></button>
+                                            <button type="button" class="btn btn-dark btn-icon waves-effect waves-light"><i class="ri-github-fill fs-16"></i></button>
+                                            <button type="button" class="btn btn-info btn-icon waves-effect waves-light"><i class="ri-twitter-fill fs-16"></i></button>
+                                        </div>
+                                    </div> -->
+                                </form>
+  
+                            </div>
+                        </div>
+                        <!-- end card body -->
+                    </div>
+                    <!-- end card -->
+  
+                    <div class="mt-4 text-center">
+                        <p class="mb-0">Ya tiene una cuenta ? <a routerLink="/auth/login" class="fw-semibold text-primary text-decoration-underline"> Ingresar </a> </p>
+                    </div>
+  
+                </div>
+            </div>
+            <!-- end row -->
+        </div>
+        <!-- end container -->
+    </div>
+    <!-- end auth page content -->
+  
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-center">
+                        <p class="mb-0 text-muted">&copy; <script>document.write(new Date().getFullYear())</script> Win. <i class="mdi mdi-soccer text-danger"></i><i class="mdi mdi-basketball text-danger"></i><i class="mdi mdi-tennis-ball text-danger"></i></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end Footer -->
+  </div>
+  <!-- end auth-page-wrapper -->  
