--- a/src/app/componentes/account/login/login.component.html
+++ b/src/app/componentes/account/login/login.component.html
@@ -73,19 +73,7 @@
                                     </div>
   
                                     <div class="mt-4">
-                                        <button class="btn btn-success w-100" type="submit">Iniciar Sesión</button>
-                                    </div>
-  
-                                    <div class="mt-4 text-center">
-                                        <div class="signin-other-title">
-                                            <h5 class="fs-13 mb-4 title">Iniciar Sesión con</h5>
-                                        </div>
-                                        <div class="d-flex gap-2 justify-content-center">
-                                            <button type="button" class="btn btn-primary btn-icon waves-effect waves-light"><i class="ri-facebook-fill fs-16"></i></button>
-                                            <button type="button" class="btn btn-danger btn-icon waves-effect waves-light"><i class="ri-google-fill fs-16"></i></button>
-                                            <button type="button" class="btn btn-dark btn-icon waves-effect waves-light"><i class="ri-github-fill fs-16"></i></button>
-                                            <button type="button" class="btn btn-info btn-icon waves-effect waves-light"><i class="ri-twitter-fill fs-16"></i></button>
-                                        </div>
+                                        <button class="btn btn-primary w-100" type="submit">Iniciar Sesión</button>
                                     </div>
                                 </form>
                             </div>
