Se agrega diseno pantalla BajaComplejo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+.btn-primary{
+    color: #fff !important;
+    background-color: #7FCB16 !important;
+    border-color: #7FCB16 !important;
+}
+
+.btn-secondary{
+    color: #fff !important;
+    background-color: #4F21CC !important;
+    border-color: #4F21CC !important;
+}
+
+.btn-success{
+    color: #495057 !important;
+    background-color: #E8CC15 !important;
+    border-color: #E8CC15 !important;
+}
+
+.btn-info{
+    color: #fff !important;
+    background-color: #367AFF !important;
+    border-color: #367AFF !important;
+}
+
+.btn-danger{
+    color: #fff !important;
+    background-color: #FF2903 !important;
+    border-color: #FF2903 !important;
+}
+
