--- a/src/app/componentes/landing/index/index.component.html
+++ b/src/app/componentes/landing/index/index.component.html
@@ -4,9 +4,9 @@
        <nav class="navbar navbar-expand-lg navbar-landing fixed-top" id="navbar" (window:scroll)="windowScroll()">
            <div class="container">
                <a class="navbar-brand" routerLink="/">
-                   <img src="assets/images/logo-dark.png" class="card-logo card-logo-dark" alt="logo dark" height="17">
-                   <img src="assets/images/logo-light.png" class="card-logo card-logo-light" alt="logo light"
-                       height="17">
+                   <img src="assets/images-win/WinLogo.png" class="card-logo card-logo-dark" alt="logo dark" height="100">
+                   <img src="assets/images-win/WinLogo.png" class="card-logo card-logo-light" alt="logo light"
+                       height="100">
                </a>
                <button class="navbar-toggler py-0 fs-20 text-body" type="button" data-bs-toggle="collapse"
                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -14,38 +14,12 @@
                    <i class="mdi mdi-menu"></i>
                </button>
    
-               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                   <ul class="navbar-nav mx-auto mt-2 mt-lg-0" id="navbar-example">
-                       <li class="nav-item">
-                           <a class="nav-link active" [ngClass]="{'active':currentSection === 'hero'}" [ngxScrollTo]="'#hero'" href="javascript:void(0);">Home</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" [ngClass]="{'active':currentSection === 'services'}" [ngxScrollTo]="'#services'" href="javascript:void(0);">Services</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" [ngClass]="{'active':currentSection === 'features'}" [ngxScrollTo]="'#features'" href="javascript:void(0);">Features</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" [ngClass]="{'active':currentSection === 'plans'}" [ngxScrollTo]="'#plans'" href="javascript:void(0);">Plans</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" [ngClass]="{'active':currentSection === 'reviews'}" [ngxScrollTo]="'#reviews'" href="javascript:void(0);">Reviews</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" [ngClass]="{'active':currentSection === 'team'}" [ngxScrollTo]="'#team'" href="javascript:void(0);">Team</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" [ngClass]="{'active':currentSection === 'contact'}" [ngxScrollTo]="'#contact'" href="javascript:void(0);">Contact</a>
-                       </li>
-                   </ul>
-   
+               <div class="collapse navbar-collapse d-flex gap-2 mt-4" style="justify-content: flex-end !important;" id="navbarSupportedContent">
                    <div class="">
-                       <a routerLink="/signin/basic" class="btn btn-link fw-medium text-decoration-none text-dark">Sign
-                           in</a>
-                       <a routerLink="/signup/basic" class="btn btn-primary">Sign Up</a>
+                       <a routerLink="/auth/login" class="btn btn-link fw-medium text-decoration-none text-dark">Iniciar Sesión</a>
+                       <a routerLink="/auth/registrarse" class="btn btn-primary">Registrarse</a>
                    </div>
                </div>
-   
            </div>
        </nav>
        <!-- end navbar -->
@@ -57,9 +31,9 @@
                <div class="row justify-content-center">
                    <div class="col-lg-8 col-sm-10">
                        <div class="text-center mt-lg-5 pt-5">
-                           <h1 class="display-6 fw-semibold mb-3 lh-base">The better way to manage your website with <span
-                                   class="text-success">Velzon </span></h1>
-                           <p class="lead text-muted lh-base">Velzon is a fully responsive, multipurpose and premium Bootstrap 5 Admin & Dashboard Template built in multiple frameworks.</p>
+                           <h1 class="display-6 fw-semibold mb-3 lh-base">Jugar nunca fue tan fácil, gracias a <span
+                                   class="text-primary">Win </span></h1>
+                           <p class="lead text-muted lh-base">Buscá en tiempo en real las canchas disponibles cerca tuyo y preparate para jugar.</p>
    
                            <div class="d-flex gap-2 justify-content-center mt-4">
                                <a routerLink="/signup/basic" class="btn btn-primary">Get Started <i class="ri-arrow-right-line align-middle ms-1"></i></a>
@@ -117,21 +91,6 @@
            <!-- end shape -->
        </section>
        <!-- end hero section -->
-   
-   <!-- <app-client-logo></app-client-logo>
-   <app-services></app-services>
-   <app-collection></app-collection>
-   <app-cta></app-cta>
-   <app-designed></app-designed>
-   <app-plan></app-plan>
-   <app-faqs></app-faqs>
-   <app-review></app-review>
-   <app-counter></app-counter>
-   <app-work-process></app-work-process>
-   <app-team></app-team>
-   <app-contact></app-contact>
-   <app-cta></app-cta>
-   <app-footer></app-footer> -->
    </div>
    
    </div>
