--- a/src/app/componentes/pantallas/gestion-de-canchas/gestion-de-canchas.component.html
+++ b/src/app/componentes/pantallas/gestion-de-canchas/gestion-de-canchas.component.html
@@ -1,8 +1,9 @@
 <form autocomplete="off" [formGroup]="formularioRegistrarCancha" (ngSubmit)="registrarCancha()">
-    <div *ngIf="this.accionABMC == 'A'" class="container-fluid">
-      <h1>Registrar cancha</h1>
-      <div class="row mb-3">
-        <div class="col-md-6">
+    <div *ngIf="this.accionABMC == 'A'" class="container mt-5">
+      <h1 style="text-align: center;">Registrar cancha</h1>
+      <div class="row mb-3 justify-content-center">
+        <div class="col-md-8">
+
           <div class="mb-3">
             <!-- Deportes -->
             <label for="deporte" class="form-label color-text">Deporte</label>
@@ -11,7 +12,8 @@
               <option *ngFor="let deporte of this.deportes" value="{{deporte.id_deporte}}">{{deporte.nombre}}</option>
             </select>
             <small *ngIf="deporteNoValido" class="text-danger">Seleccione un deporte</small>
-          </div>  
+          </div>
+
           <div class="mb-3">
             <!-- Tipos de cancha -->
             <label for="tipoCancha" class="form-label color-text">Tipo de cancha</label>
@@ -21,6 +23,7 @@
             </select>
             <small  *ngIf="tipoDeCanchaNoValida" class="text-danger">Seleccione un tipo de cancha</small>
           </div>
+
           <div class="mb-3">
             <!-- Tipos de piso -->
             <label for="tipoPiso" class="form-label color-text">Tipo de piso</label>
@@ -29,7 +32,8 @@
               <option  *ngFor="let tipoPiso of this.tiposPisos" value="{{tipoPiso.id_tipo_piso}}">{{tipoPiso.nombre}}</option>
             </select>  
             <small class="text-danger" *ngIf="tipoDePisoNoValido">Seleccione tipo de piso</small>
-          </div>  
+          </div>
+
           <div class="mb-3">            
             <label for="descripcion" class="form-label color-text">Descripción</label>
             <div class="form-floating">
@@ -37,25 +41,24 @@
               <small *ngIf="descripcionNoValida" class="text-danger">Debe ingresar una descripcion</small>
             </div>
           </div>
-        </div>  
-        <div class="col-md-6">
-          <!-- Cargar de imagenes -->
-          <div class="mb-3">
+            <!-- Cargar de imagenes -->
+            <div class="mb-3">
               <label for="imagenCancha" class="form-label color-text">Cargar fotos de cancha</label>
               <input class="form-control" type="file" id="imagenCancha" (change)="capturarImagen($event)" formControlName="fotos"/>
               <small *ngIf="fotosNoValidas" class="text-danger">Debe ingresar al menos una imagen con formato <b>.png, .jpg o .jpeg</b></small>
-          </div>
-          <div class="imagenes" *ngIf="previzualizacion" formArrayName="fotos">
+            </div>
+            
+            <div class="imagenes" *ngIf="previzualizacion" formArrayName="fotos">
               <div class="mt-2 img" *ngFor="let file of this.archivos; let i = index">
                 <img width="200px" height="200px" [src]="file" alt="">
                 <button type="button" class="btn btn-outline-danger mt-1" (click)="eliminarImagen(i)">Eliminar imagen</button>
               </div>
-          </div>  
-        </div>
+            </div>  
+        </div>  
         <div class="btnRegistrarCancha mt-3">
           <!-- Boton registrar cancha -->
           <button type="button" class="btn btn-outline-primary" (click)="cambiarPagina('C')">Regresar</button>
-          <button type="submit" class="btn btn-primary">Registrar cancha</button>
+          <button type="submit" class="btn btn-primary" style="margin-left: 10px;">Registrar cancha</button>
         </div>
       </div>
     </div>
@@ -66,8 +69,8 @@
 
 
 <div *ngIf="this.accionABMC == 'C'" class="container">
-    <div class="row">
-        <div class="col-md-12">
+    <div class="row justify-content-center mt-5 mb-3">
+        <div class="col-md-9">
             <h1 style="text-align: center;">Mis canchas</h1>
             <div class="consultarCancha">
                 <h3>Mostrar canchas por</h3>
@@ -97,12 +100,13 @@
                 </form>  
             </div>
             <div class="table-responsive table-card mb-3">
-              <table class="table table-nowrap mb-0">
+              <table class="table table-bordered border-primary table-nowrap mt-2 mb-0">
                   <thead class="table-ligth">
                     <tr>
                       <th scope="col" style="text-align: center;">Nro de cancha</th>
                       <th scope="col" style="text-align: center;">Deporte</th>
                       <th scope="col" style="text-align: center;">Tipo de cancha</th>
+                      <th scope="col" style="text-align: center;">Tipo de piso</th>
                       <th scope="col" style="text-align: center;">Estado</th>
                       <th scope="col" style="text-align: center;">Acción</th>
                     </tr>
@@ -112,10 +116,82 @@
                       <td style="text-align: center;">{{canchasComplejo.id_cancha}}</td>
                       <td style="text-align: center;">{{canchasComplejo.tipoCancha.deporte.nombre}}</td>
                       <td style="text-align: center;">{{canchasComplejo.tipoCancha.descripcion}}</td>
+                      <td style="text-align: center;">{{canchasComplejo.tipoPiso.nombre}}</td>
                       <td style="text-align: center;">{{canchasComplejo.estadoCancha.nombre_estado}}</td>
-                      <td style="text-align: center;">
-                        <button type="button" class="btn btn-outline-danger" >Dar de baja</button>
-                      </td>
+                      <td style="text-align: center;">          
+                        <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#exampleModalgrid" (click)="abrirModal(contenido, canchasComplejo)">Modificar</button>
+                        <!-- Grids in modals -->
+                        <ng-template class="modal fade" #contenido tabindex="-1" aria-labelledby="exampleModalgridLabel" aria-modal="true">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">Modificar cancha</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="cerrarModal()"></button>
+                              </div>
+                              <div class="modal-body">
+                                <form autocomplete="off" [formGroup]="formularioModificarCancha" (ngSubmit)="modificarCancha(canchasComplejo)" >
+                                  <div class="row g-3">
+                                    <div class="col-xxl-6" style="display: flex; flex-direction: row; align-items: center;">
+                                      <!-- Numero de cancha -->
+                                        <div class="col-md-5">
+                                          <label class="form-label">Numero de cancha</label>
+                                        </div>
+                                        <div class="col-md-1">
+                                          <input type="text" class="form-control" formControlName="nroCancha">
+                                        </div> 
+                                    </div><!--end col Nro cancha-->
+                                    <div class="col-xxl-6">
+                                      <div>
+                                          <label class="form-label">Tipo de cancha</label>
+                                          <select class="form-select" name="tipoCancha" formControlName="idTipoCancha">
+                                            <option  disabled selected>Seleccione un tipo de cancha</option>
+                                            <option  *ngFor="let tipoCancha of this.todosTiposDeCancha" value="{{tipoCancha.id_tipo_cancha}}">{{tipoCancha.descripcion}}</option>
+                                          </select>
+                                          <small class="text-info">Seleccione si desea modificar el tipo de cancha, en caso contrario no seleccione</small>
+                                      </div>
+                                    </div><!--end col-->
+                                    <div class="col-lg-12">
+                                      <div>
+                                        <label class="form-label">Tipo de piso</label>
+                                        <select class="form-select" name="id_tipo_piso" formControlName="id_tipo_piso">
+                                          <option  disabled selected>Seleccione un tipo de piso</option>
+                                          <option  *ngFor="let piso of this.todosTiposDePiso" value="{{piso.id_tipo_piso}}">{{piso.nombre}}</option>
+                                        </select>
+                                        <small class="text-info">Seleccione si desea modificar el tipo de piso, en caso contrario no seleccione</small>
+                                      </div>
+                                    </div><!--end col-->
+                                    <div class="col-lg-12">
+                                      <div>
+                                        <label class="form-label color-text">Descripción</label>
+                                        <div class="form-floating">
+                                          <textarea class="form-control" style="height: 100px" formControlName="descripcion"></textarea>          
+                                          <small class="text-info">Modificar si desea cambiar la descripcion, en caso contrario no modifique</small>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="col-xxl-6">
+                                      <div>
+                                        <label class="form-label">Estado</label>
+                                        <select class="form-select" formControlName="idEstado">
+                                          <option  disabled selected>Seleccione un estado</option>
+                                          <option  *ngFor="let estado of this.estadosCanchas" value="{{estado.id_estado_cancha}}">{{estado.nombre_estado}}</option>
+                                        </select>
+                                        <small class="text-info">Seleccione si desea cambiar el estado de la cancha, en caso contrario no seleccione</small>                                          
+                                      </div>
+                                    </div><!--end col-->
+                                    <div class="col-lg-12">
+                                      <div class="hstack gap-2 justify-content-end">
+                                          <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="cerrarModal()" >Cancelar</button>
+                                          <button type="submit" class="btn btn-primary">Modificar cancha</button>
+                                      </div>
+                                    </div><!--end col-->
+                                  </div><!--end row-->
+                                </form>
+                              </div>
+                            </div>
+                          </div>
+                        </ng-template>
+                      </td> <!-- end-boton-modificar -->
                     </tr>
                   </tbody>
                 </table>
