Estilos de cabecera

--- a/src/app/componentes/layout/topbar/topbar.component.html
+++ b/src/app/componentes/layout/topbar/topbar.component.html
@@ -84,7 +84,7 @@
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                         <!-- item-->
                         <h6 class="dropdown-header">Bienvenido Tomás!</h6>
-                        <a class="dropdown-item" routerLink="/perfil"><i
+                        <a class="dropdown-item" routerLink="/ag/perfil"><i
                                 class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Perfil</span></a>
                         <a class="dropdown-item" href="auth/lockscreen/basic"><i
