--- a/src/assets/scss/config/default/_variables.scss
+++ b/src/assets/scss/config/default/_variables.scss
@@ -188,7 +188,7 @@ $green:      #0ab39c;
 $teal:       #02a8b5;
 $cyan:       #299cdb;
 $verde-primary: #7FCB16;
-$gris-primary: #7FCB16;
+$gris-primary: #212529;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
