--- a/src/assets/scss/pages/_profile.scss
+++ b/src/assets/scss/pages/_profile.scss
@@ -31,7 +31,7 @@
         top: 0;
         bottom: 0;
         opacity: 0.9;
-        background: $primary;
+        background: $gris-primary;
         // background: linear-gradient(to top, darken($primary, 25%), $primary);
 
     }
