Integracion con Firebase

--- a/src/app/componentes/account/login/login.component.html
+++ b/src/app/componentes/account/login/login.component.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <p class="mb-0 text-muted">&copy; {{year}} Velzon. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                        <p class="mb-0 text-muted">&copy; {{year}} Win. <i class="mdi mdi-soccer text-danger"></i><i class="mdi mdi-basketball text-danger"></i><i class="mdi mdi-tennis-ball text-danger"></i></p>
                     </div>
                 </div>
             </div>
