--- a/src/app/componentes/pantallas/gestionar-usuario/gestionar-usuario.component.html
+++ b/src/app/componentes/pantallas/gestionar-usuario/gestionar-usuario.component.html
@@ -16,7 +16,6 @@
               <p class="text-white-75">Administrador</p>
               <div class="hstack text-white-50 gap-1">
                   <div class="me-2"><i class="ri-map-pin-user-line me-1 text-white-75 fs-16 align-middle"></i>Córdoba, Argentina</div>
-                  <!-- <div><i class="ri-building-line me-1 text-white-75 fs-16 align-middle"></i>Themesbrand</div> -->
               </div>
           </div>
       </div><!--end col-->
@@ -51,6 +50,17 @@
                                     <th class="ps-0" scope="row">E-mail:</th>
                                     <td class="text-muted">{{Lista?.email}}</td>
                                 </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div><!-- end card body -->
+            </div><!-- end card -->
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title mb-3">Datos Jugador</h5>
+                    <div class="table-responsive">
+                        <table class="table table-borderless mb-0">
+                            <tbody>
                                 <tr>
                                     <th class="ps-0" scope="row">Deporte:</th>
                                     <td class="text-muted">Fútbol</td>
