--- a/src/app/componentes/account/registrarse/registrarse.component.html
+++ b/src/app/componentes/account/registrarse/registrarse.component.html
@@ -81,7 +81,7 @@
                                     </div>
   
                                     <div class="mt-4">
-                                        <button class="btn btn-primary w-100" type="submit">Registrarme</button>
+                                        <button class="btn btn-primary w-100" (click)="registrar()">Registrarme</button>
                                     </div>
   
                                     <!-- <div class="mt-4 text-center">
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <p class="mb-0 text-muted">&copy; <script>document.write(new Date().getFullYear())</script> Win. <i class="mdi mdi-soccer text-danger"></i><i class="mdi mdi-basketball text-danger"></i><i class="mdi mdi-tennis-ball text-danger"></i></p>
+                        <p class="mb-0 text-muted">&copy; {{year}} Win. <i class="mdi mdi-soccer text-danger"></i><i class="mdi mdi-basketball text-danger"></i><i class="mdi mdi-tennis-ball text-danger"></i></p>
                     </div>
                 </div>
             </div>
