Correccion de estilos y funcionalidad de GestionComplejo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,8 @@
     border-color: #FF2903 !important;
 }
 
+.btn-outline-success:hover{
+    color: #fff !important;
+    background-color: #7FCB16 !important;
+    border-color: #7FCB16 !important;
+}
